- 
    Type:
Bug
 - 
    Resolution: Fixed
 - 
    Priority:
  P3                     
     - 
    Affects Version/s: 6u75, 8u5, 9
 - 
    Component/s: client-libs
 
- 
        b28
 
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build | 
|---|---|---|---|---|---|---|
| JDK-8056475 | emb-9 | Anton Nashatyrev | P3 | Resolved | Fixed | master | 
| JDK-8063770 | 8u45 | Anton Nashatyrev | P3 | Resolved | Fixed | b01 | 
| JDK-8053933 | 8u40 | Anton Nashatyrev | P3 | Resolved | Fixed | b02 | 
| JDK-8070223 | emb-8u47 | Anton Nashatyrev | P3 | Resolved | Fixed | team | 
| JDK-8053952 | 7u80 | Anton Nashatyrev | P3 | Resolved | Fixed | b02 | 
| JDK-8061065 | 7u79 | Anton Nashatyrev | P3 | Resolved | Fixed | b01 | 
| JDK-8057389 | 7u76 | Anton Nashatyrev | P3 | Closed | Fixed | b01 | 
| JDK-8054901 | 6u91 | Anton Nashatyrev | P3 | Resolved | Fixed | b01 | 
When a program show a dialogue, user presses ESC key and left-button of mouse
so quickly and repeatedly, ESC KeyEvent can not be accepted.
This occurs only in jdk6ux, not in jdk7ux.
- backported by
 - 
                    
JDK-8053933 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8053952 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8054901 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8056475 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8061065 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8063770 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8070223 KeyEvent can not be accepted in quick mouse clicking
-         
     - Resolved
 
 -         
 - 
                    
JDK-8057389 KeyEvent can not be accepted in quick mouse clicking
-         
     - Closed
 
 -         
 
- relates to
 - 
                    
JDK-4434193 ActionEvents (and other events) need timestamps
-         
     - Resolved
 
 -         
 - 
                    
JDK-6451578 A mouse listener method happens to process mouse events whose time is in the future.
-         
     - Closed
 
 -         
 - 
                    
JDK-8057834 Fix for 8046495 overwrote jdk6u hgignore
-         
     - Closed
 
 -