8046495: KeyEvent can not be accepted in quick mouse clicking

Reviewed-by: art, pchelko